BlazingStory/wwwroot/css/styles.css
/* ... */
* {
  box-sizing: border-box;
}

html, body {
  margin: 0;
  padding: 0;
}

body {
  font-family: var(--bs-font-family);
  font-size: 16px;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-overflow-scrolling: touch;
  overflow: hidden;
}
body .color-scheme-container {
  color: var(--bs-text-color);
  background: var(--bs-back-color);
}
body .color-scheme-container a {
  color: var(--bs-link-color);
}

button, input, textarea, select {
  font-family: inherit;
  font-size: inherit;
  margin: 0;
}

button {
  outline: 0;
  border: none;
  appearance: none;
  background-color: transparent;
  cursor: pointer;
  white-space: nowrap;
}

.stack {
  display: flex;
}
.stack.gap {
  gap: 16px;
}
.stack.horizontal {
  flex-direction: row;
}
.stack.vertical {
  flex-direction: column;
}
.stack .fill {
  flex: 1;
}

.bs-basic-inputs-holder {
  display: inline-block;
  line-height: normal;
  overflow: hidden;
  position: relative;
  vertical-align: top;
  width: 100%;
}

.bs-basic-inputs {
  appearance: none;
  border: none;
  outline: none;
  margin: 0;
  padding: 6px 10px;
  width: 100%;
  font-size: var(--bs-text-size);
  background: var(--bs-inputs-background);
  color: var(--bs-inputs-text-color);
  box-shadow: var(--bs-inputs-box-shadow);
  border-radius: 4px;
  line-height: 20px;
  text-align: left;
  overflow: visible;
  transition: inherit, box-shadow 200ms ease-out, opacity 200ms ease-out;
}
.bs-basic-inputs:focus, .bs-basic-inputs:focus-visible {
  box-shadow: var(--bs-focused-color) 0 0 0 1px inset;
}
.bs-basic-inputs:invalid {
  box-shadow: #FF4400 0 0 0 1px inset !important;
}

.split-container[b-split-container] {
  --splitter-bar-size: 0px;
}
.split-container[b-split-container] > .spliter-bar {
  position: relative;
}
.split-container[b-split-container] > .spliter-bar::after {
  content: "";
  position: absolute;
  z-index: 1;
  transition: color 0.2s linear, background-position 0.2s linear, background-size 0.2s linear, background 0.2s linear;
  background-image: radial-gradient(at center center, rgba(0, 0, 0, 0.2) 0%, transparent 70%, transparent 100%);
  background-repeat: no-repeat;
}
.split-container[b-split-container].splitter-orientation-vertical > .spliter-bar::after {
  width: 8px;
  right: -5px;
  top: 0;
  bottom: 0;
  background-size: 50px 100%;
  background-position: 10px 50%;
}
.split-container[b-split-container].splitter-orientation-vertical > .spliter-bar:hover::after {
  background-position: 0 50%;
}
.split-container[b-split-container].splitter-orientation-horizontal > .spliter-bar::after {
  height: 8px;
  left: 0;
  right: 0;
  bottom: -5px;
  background-size: 100% 50px;
  background-position: 50% 10px;
}
.split-container[b-split-container].splitter-orientation-horizontal > .spliter-bar:hover::after {
  background-position: 50% 0;
}

.pane-of-split-container {
  display: flex;
  flex-direction: column;
}
.pane-of-split-container .fill {
  flex: 1;
}

:root {
  --bs-scrollbar-transition: scrollbar-color 0.2s linear;
}

* {
  scrollbar-width: thin;
  scrollbar-color: transparent transparent;
  transition: var(--bs-scrollbar-transition);
}
*:hover {
  scrollbar-color: var(--bs-scrollbar-thumb-color) var(--bs-scrollbar-back-color);
}

.color-scheme-container {
  display: contents;
}

.brand-logo {
  padding-left: 26px;
  background-size: inherit;
  background-repeat: inherit;
  background-position: inherit;
  background-image: var(--bs-brand-logo-icon-url);
  display: inline-block;
}

.main-layout {
  overflow: hidden;
  width: 100vw;
  height: 100vh;
  background-color: var(--bs-back-color);
}
.main-layout > .pane-of-split-container:first-of-type {
  transition: width linear 0.1s, min-width linear 0.1s, var(--bs-scrollbar-transition);
}
.main-layout > .pane-of-split-container:first-of-type .sidebar-container {
  display: none;
}
.main-layout > .pane-of-split-container:last-of-type {
  box-shadow: var(--bs-layout-border-shadow);
}
.main-layout.sidebar-shown > .pane-of-split-container:first-of-type .sidebar-container {
  display: block;
}
.main-layout.sidebar-hidden > .pane-of-split-container:first-of-type {
  min-width: 0 !important;
  width: 0 !important;
}
.main-layout.sidebar-hidden > .spliter-bar {
  display: none;
}

.sidebar-container {
  padding: 16px calc(12px - var(--splitter-bar-size) + 1px) 20px 12px;
  background-color: var(--bs-back-color);
}

.sidebar .sidebar-header {
  display: flex;
  min-height: 42px;
  align-items: center;
  margin-bottom: var(--bs-sidebar-gap-size);
  padding-left: 8px;
}
.sidebar .sidebar-header .sidebar-header-title {
  flex: 1;
  height: 24px;
  line-height: 24px;
  font-size: 16px;
  font-weight: 900;
  color: var(--bs-sidebar-header-title-color);
  text-shadow: 0.5px 0 0 var(--bs-sidebar-header-title-color);
  background-size: 24px;
  background-repeat: no-repeat;
  background-position: -2px center;
  white-space: nowrap;
}
.sidebar .sidebar-header .sidebar-header-title a {
  text-decoration: none;
  color: inherit;
}
.sidebar .sidebar-header .settings-popup-menu .popup-menu-trigger .icon-button {
  width: 32px;
  height: 32px;
  justify-content: center;
}
.sidebar .sidebar-header .settings-popup-menu .popup-menu-holder {
  min-width: 180px;
}
.sidebar .explorer-menu {
  margin: 20px 0;
}
.sidebar .explorer-menu:has(> .navigation-tree > .navigation-tree-item.type-container:first-child) {
  margin-top: 0;
}

.settings-popup-menu .popup-menu-body {
  margin-left: 16px;
  padding: 4px 4px;
}

.search-field {
  position: relative;
}
.search-field input {
  appearance: none;
  height: 32px;
  padding: 1px 32px 1px 29px;
  border: 1px solid var(--bs-border-color);
  background: transparent;
  border-radius: 6px;
  font-size: 13px;
  font-family: inherit;
  -webkit-transition: all 150ms;
  transition: all 150ms;
  color: var(--bs-text-color);
  width: 100%;
}
/* ... */

